# Stirling-SDG-SDK

./: .dockerignore  .gitignore  Dockerfile  README.md  create_sample.py  docker-compose.yml  full_pipeline.py  pyproject.toml  test_direct_edit.py  test_direct_pipeline.py  test_extraction.py  test_pipeline.py
src/: __init__.py
src/classification/: classifier.py
src/detection/: detector.py
src/json_editor/: editor.py
src/pipeline/: config_manager.py  orchestrator.py
src/stirling/: http_client.py  local_client.py
src/stirling_sdg/: __init__.py  __main__.py
src/stirling_sdg/classification/: prompts.py
src/stirling_sdg/config/: settings.py
src/stirling_sdg/json_editor/: navigator.py
src/stirling_sdg/pipeline/: orchestrator.py
src/stirling_sdg/stirling/: client.py  direct_edit_client.py
src/stirling_sdg/utils/: exceptions.py  logging_utils.py
src/synthesis/: generator.py  github_models_client.py
